test/test_suite/errors/error_decl_fails.c3
module foo;



errtype TheError
{
    union // #error: A type name was expected here
    {
        int a;
        int b;
    }
}